<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="@dimen/marginleft"
              android:layout_marginRight="@dimen/marginright"
              android:layout_marginTop="@dimen/margintop"
              tools:context="com.compindia.clientapp.fragment.FreeSignInFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/et_freesignin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_freesignin_name"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_email_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />
    <EditText
        android:id="@+id/et_freesignin_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_freesignin_email"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_email_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />
    <EditText
        android:id="@+id/et_freesignin_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_freesignin_phonenumber"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_email_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />

    <EditText
        android:id="@+id/et_freesignin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_freesignin_password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_password_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />
    <EditText
        android:id="@+id/et_freesignin_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_freesignin_confirmpassword"
        android:singleLine="true"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_password_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />
    <Button
        android:id="@+id/bt_freesignin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_freesignup_registration"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
