<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/marginleft"
    android:layout_marginRight="@dimen/marginright"
    android:layout_marginTop="@dimen/margintop"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:id="@+id/et_paidsignup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_paidsignup_name"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_email_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />
    <EditText
        android:id="@+id/et_paidsignup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_paidsignup_email"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_email_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />
    <EditText
        android:id="@+id/et_paidsignup_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_paidsignup_phonenumber"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_email_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />
    <EditText
        android:id="@+id/et_paidsignup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_paidsignup_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_password_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />
    <EditText
        android:id="@+id/et_paidsignup_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_paidsignup_confirmpassword"
        android:inputType="textPassword"
        android:singleLine="true"
        android:drawableLeft="@drawable/ic_password_48"
        android:background="@drawable/editborder"
        android:layout_marginTop="@dimen/margintop_password"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_paidsignup_paypal"
        android:layout_gravity="center_horizontal"
        />
<!--
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_paidsignup_registration"
        android:layout_gravity="center_horizontal"
        />
-->
    </LinearLayout>
</LinearLayout>